--- a/src/main/resources/templates/boardWrite.html
+++ b/src/main/resources/templates/boardWrite.html
@@ -8,15 +8,29 @@
 <style>
     .layout {
         width: 500px;
-        margin : 0 auto;
+        margin: 0 auto;
+        margin-top: 40px;
+    }
+
+    .layout input {
+        width: 100%;
+        box-sizing: border-box
+    }
+
+    .layout textArea {
+        width: 100%;
+        margin-top: 10px;
+        min-height: 300px;
     }
 </style>
 
 <body>
     <div class="layout">
-        <input type="text">
-        <textarea></textarea>
-        <button>작성</button>
+        <form action="/board/writepro" method="post">
+            <input type="text" name="title">
+            <textarea name="content"></textarea>
+            <button type="submit">작성</button>
+        </form>
     </div>
 </body>
 </html>
